--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ numpy>=1.19.1
 pandas>=1.1.3
 python-dateutil==2.8.1
 pytz==2019.3
+scipy==1.4.1
 scikit-learn==0.22.1
 six==1.14.0
 virtualenv==20.0.7
