--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.15.1
 MarkupSafe==1.1.1
+Cython==0.29.17
 numpy>=1.19.1
 pandas>=1.1.3
 python-dateutil==2.8.1
