--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Flask==1.1.2
+appdirs==1.4.3
+certifi==2020.6.20
+click==7.1.2
+distlib==0.3.0
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
