--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ numpy>=1.19.1
 pandas>=1.1.3
 python-dateutil==2.8.1
 pytz==2019.3
+scikit-learn==0.24.1
+scipy==1.6.2
 six==1.14.0
 virtualenv==20.0.7
 Werkzeug==1.0.1
